re PR tree-optimization/46785 (Doesn't vectorize reduction x += y*y)

2010-12-06  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/46785
	* tree-vect-loop.c (vect_is_simple_reduction_1): Also allow
	call statements as operand definition.

	* gcc.dg/vect/fast-math-vect-reduc-9.c: New testcase.

From-SVN: r167486