gcc/testsuite/gcc.dg/vect/fast-math-vect-reduc-9.c
@@ -1,0 +1,30 @@
+/* { dg-require-effective-target vect_float } */
+
+#include "tree-vect.h"
+
+float x[1024];
+float
+test (void)
+{
+  int i;
+  float gosa = 0.0;
+  for (i = 0; i < 1024; ++i)
+    {
+      float tem = x[i];
+      gosa += tem * tem;
+    }
+  return gosa;
+}
+
+int main (void)
+{
+  check_vect ();
+
+  if (test () != 0.0)
+    abort ();
+
+  return 0;
+}
+
+/* { dg-final { scan-tree-dump "vectorized 1 loops" "vect" } } */
+/* { dg-final { cleanup-tree-dump "vect" } } */
